# plataforma-gestion-reservas-tfg

./: README.md
pipeline/: .env.example  .gitignore  Modelfile  README.md  pipeline_bitacora.md  pipeline_specs.md  pyproject.toml
pipeline/brief/: brief.md
pipeline/runs/: inventario_runs.md
pipeline/runs/run_2026-04-25_01-10/: run_summary.json
pipeline/runs/run_2026-04-25_10-11/: run_summary.json
pipeline/runs/run_2026-05-07_20-50/: run_summary.json
pipeline/runs/run_2026-05-07_23-50/: run_summary.json
pipeline/runs/run_2026-05-08_12-03/: run_summary.json
pipeline/runs/run_2026-05-08_22-18/: run_summary.json
pipeline/runs/run_2026-05-08_22-51/: run_summary.json
pipeline/runs/run_2026-05-09_18-54/: run_summary.json
pipeline/runs/run_2026-05-09_20-18/: run_summary.json
pipeline/runs/run_2026-05-10_10-50/: run_summary.json
pipeline/runs/run_2026-05-11_13-11/: run_summary.json
pipeline/runs/run_2026-05-11_13-31/: run_summary.json
pipeline/runs/run_2026-05-12_13-29/: run_summary.json
pipeline/runs/run_2026-05-12_15-34/: run_summary.json
pipeline/runs/run_2026-05-12_16-48/: run_summary.json
pipeline/runs/run_2026-05-13_06-57/: run_summary.json
pipeline/runs/run_2026-05-13_15-33/: run_summary.json
pipeline/runs/run_2026-05-13_23-50/: run_summary.json
pipeline/runs/run_2026-05-14_02-35/: run_summary.json
pipeline/runs/run_2026-05-14_11-32/: run_summary.json
pipeline/runs/run_2026-05-14_16-05/: run_summary.json
pipeline/scripts/: human_test.py  test_feedback_placeholder.py  test_llm_solo.py  verify_pipeline.py
(+914 files in other folders)
