[project]
name = "pipeline"
version = "0.1.0"
description = "pipeline using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,litellm,tools]==1.14.2",
    "pydantic>=2.11.10",
    "PyYAML>=6.0.2",
    "tzdata>=2026.2",
]

[project.scripts]
kickoff = "pipeline.main:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
